objects/DMAPP__Call_Plan__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Agenda__c</fullName>
        <label>Agenda</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Collateral__c</fullName>
        <label>Collateral</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Competitive_Considerations__c</fullName>
        <label>Competitive Considerations</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Customer_Expectation__c</fullName>
        <label>Customer Expectation</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Dealmaker_Opportunity__c</fullName>
        <label>Dealmaker Opportunity</label>
        <referenceTo>DMAPP__DM_Opportunity_Extra__c</referenceTo>
        <relationshipName>Smart_Call_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Description__c</fullName>
        <label>Description</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__From_Date_Time__c</fullName>
        <label>From Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMAPP__Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Logistics__c</fullName>
        <label>Logistics</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Other_Notes__c</fullName>
        <label>Other Notes</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on someone else</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__To_Date_Time__c</fullName>
        <label>To Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMAPP__Why_We_Might_Fail__c</fullName>
        <label>Why We Might Fail</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <label>Call Plan</label>
    <nameField>
        <label>Call Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>